# competitive-library

./: .gitignore  BinomialCoefficient.cpp  CMakeLists.txt  CumulativeSum.cpp  GreatestCommonDivisor.cpp  Modulo.cpp  PrimeFactorization.cpp  PrimeNumberExtraction.cpp  README.md  README_EN.md  UnionFind.h  Value.cpp  copyright_notice.cpp  main.cpp  power.h  template.cpp
.devcontainer/: Dockerfile
_nuxt/: 1230644.js  2695735.js  2969b1f.js  2d6622c.js  3b88466.js  4b55c8c.js  5ac8653.js  7d39989.js  992b2ba.js  LICENSES  a2d80b0.js  aa0b893.js  aeef1e6.js  b90ce34.js  c8e129e.js  c956d96.js  d219b50.js  d3fab22.js  d697fa4.js  f1b29cf.js  fa7c1fe.js
algorithm/: CMakeLists.txt  CumulativeSum.cpp  CumulativeSum.hpp
custom/: CountUpEulerTour.cpp  CountingCharacterIntervalNumericMultiples.cpp
datastructure/: BinaryIndexedTree.cpp  BinaryIndexedTree.hpp  CMakeLists.txt  SegmentTree.cpp  SegmentTree.hpp  UnionFind.cpp  UnionFind.hpp
en/: index.html
extension_graph/: VertexReplenishmentLimitDijkstra.cpp
geometry/: Affine.hpp  CircleCalculate.cpp  CircleCalculate.hpp  Matrix.cpp  Matrix.hpp  Point.cpp  Vertex.hpp  template.cpp
graph/: Base.hpp  CountupEulerTour.hpp  Dijkstra.cpp  Dijkstra.hpp  EulerTour.cpp  EulerTour.hpp  Kruskal.cpp  Kruskal.hpp  LCADoubling.hpp  LowestCommonAncestorDoubling.cpp  ReRooting.cpp  ReRooting.hpp  template.cpp
math/: CMakeLists.txt  Combination.cpp  Combination.hpp  Factorial.cpp  Factorial.hpp  ModInt.cpp  ModInt.hpp  PrimeFactor.cpp  PrimeFactor.hpp
persistent_datastrcture/: FastPartialPersistentArray.cpp  PersistentArray.cpp  (+9 more)
(+28 files in other folders)
